Fixing about me on small devices

--- a/src/components/pages/AboutMe.css
+++ b/src/components/pages/AboutMe.css
@@ -80,8 +80,12 @@ body{
 }
 
 @media screen and (max-width: 960px) {
-    .gridWrapper, .gridWrapper{
+    .gridWrapper{
+        width: 90%;
+    }
+    .education, .technologies{
         width: 80%;
+        margin: auto;
     }
     .aboutMe{
         width: 90%;
